--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Learning Git & Github</title>
+	<title>Learning Git y Github</title>
 </head>
 <body>
 	<h1>Git y Github</h1>
